# entelequia

./: CHANGELOG.md  LICENSE.md  pyproject.toml
.circleci/: config.yml
entelequia/flask/: entelequia.py
entelequia/modules/time/: __init__.py  interface.py  system.py
entelequia/system/: implementation.py  module.py  system.py  system_interface.py
tests/: __init__.py  test_module.py  test_system_interface.py
tests/flask/: app.py  conftest.py  test_entelequia.py  test_time_system.py
tests/system/: conftest.py  test_implementation.py  test_state.py
