[tool.poetry]
name = "entelequia"
version = "0.1.0"
description = ""
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "entelequia"}]
include = [{ path = "entelequia" }]
exclude = ["docs", "tests"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"]
homepage = "https://github.com/EzequielPuerta/entelequia"
repository = "https://github.com/EzequielPuerta/entelequia"
documentation = "https://github.com/EzequielPuerta/entelequia"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flask = "^2.3.3"
pytest-cov = "4.1.0"
pre-commit = "3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
